src/cocaine-app/flowmastermind/static/css/style.css
* {
    padding: 0;
    margin: 0;
    color: inherit;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

body {
  color: #282b36;
  font-family: Verdana, Geneva, sans-serif;
/*  border-top: 8px solid #282b36; */
}

.oneBorder,
.twoBorder,
.threeBorder {
  width: 33.33%;
  float: left;
  height: 8px;
}

.oneBorder {
  background-color: #f33e6f;
}
.twoBorder {
  background-color: #46bfbd;
}
.threeBorder {
  background-color: #fdb45c;
}

.content {
    padding: 0;
}

div.close {
    color: #444;
    position: absolute;;
    top: 0;
    right: 0;
    padding: 3px;
    margin: 2px;
    z-index: 10;
    cursor: pointer;
}

div.close:hover {
    background-color: #aaa;
    color: #eee;
    margin: 1px;
    border: 1px solid #888;
}

h1.chart-header {
    margin-top: 30px;
}

span.clear {
    clear: left;
    display: block;
}

.chart-set {
    border-bottom: 1px dashed #ccc;
    padding-left:50px;
    /*overflow: auto;*/
}

.chart {
    vertical-align: top;
    display: inline-block;
    /*width: 200px;*/
    padding: 20px;
}

.chart:first {
    padding-left: 50px;
}

span.chart-label {
    display: block;
    padding: 20px 0 10px 0;
    color: #666;
    font-size: 20px;
    text-align: center;
}

span.chart-label-small {
    display: block;
    padding: 0;
    color: #666;
    font-size: 10px;
    text-align: center;
}

.ns-chart-label {
    display: block;
    padding: 10px 0 5px 20px;
    color: #666;
    font-size: 20px;
}

.inner-content {
    min-height: 100%;
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 220px;
    overflow-y: scroll;
}


/* Menu */
.menu {
    min-height: 100%;
    position: fixed;
    top: 0px;
    bottom: 0px;
    width: 200px;
    float: left;
    padding-left: 10px;
    overflow-x: scroll;
    overflow-y: scroll;
}

.menu::-webkit-scrollbar {
    width: 6px;
}

.menu::-webkit-scrollbar-track {
    -webkit-border-radius: 10px;
    border-radius: 4px;
}

.menu::-webkit-scrollbar-thumb {
    -webkit-border-radius: 4px;
    border-radius: 4px;
    background: rgba(128,128,128,0.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}
.menu::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(128,128,128,0.4);
}

.menu-page {
    display: block;
    height: 50px;
    line-height: 50px;
    vertical-align: middle;
    padding-left: 10px;

    font-size: 16px;
    font-style: italic;

    border-top: 1px dashed #fff;
    border-bottom: 1px dashed #fff;

/*    background-color: #f9f9f9;*/
}

.menu-page-item {
    display: block;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    padding-left: 20px;

    margin-left: 10px;
    border-left: 1px solid #333;

    font-size: 15px;

    margin-top: -1px;
}

.menu-page-item .selected {
    color: #999;
    font-style: italic;
}

.menu-item-header {
    display: block;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    padding-left: 10px;

    margin-left: 10px;
    border-left: 1px solid #333;

    font-size: 12px;
    font-style: italic;

    text-decoration: none;

    border-top: 1px dashed #fff;
    border-bottom: 1px dashed #fff;

 /*   background-color: #f9f9f9;*/
}

.menu-item {
    display: block;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    padding-left: 20px;

    margin-left: 10px;
    border-left: 1px solid #333;

    font-size: 15px;

    border-top: 1px dashed #fff;
    border-bottom: 1px dashed #fff;

    margin-top: -1px;

    white-space: nowrap;
}

.menu-item a {
    text-decoration: none;
    border-bottom: 1px dashed #333;
}

.menu-item:first {
    padding-top:50px;
}

/* stripes */
.stripes {
    position: fixed;
    left: 0;
    height: 100%;
    background-color: #444;
    width: 10px;
}

/*.stripes:before {
    content: ' ';
    display: block;
    height: 33%;
    width: 5px;
    background-color: #f33e6f;
}

.stripes:after {
    content: ' ';
    display: block;
    height: 33%;
    width: 5px;
    background-color: #fdb45c;
}*/

/* legend */
.chart-legend {
    float: right;
    width: 250px;
    padding-top: 50px;
}

.chart-legend-item {
    padding-top: 10px;
    vertical-align: middle;
}

.chart-legend-color-sample {
    display: inline-block;
    vertical-align: middle;
    width: 10px;
    height: 10px;
    border: 1px solid #999;
}

.color-memory-free {
    background-color: rgba(88, 218, 119, 1.0);
}

.color-memory-occ {
    background-color: #eee;
}

.color-couples-open {
    background-color: #fdb45c;
}

.color-couples-frozen {
    background-color: #cfe4ff;
}

.color-couples-bad {
    background-color: rgb(227, 65, 65);
}

.color-couples-closed {
    background-color: #eee;
}

.color-dc-total {
    background-color: rgba(220,220,220,0.5);
}

.color-dc-free {
    background-color: rgba(88, 218, 119, 0.5);
}

.color-dc-uncoupled {
    background-color: rgba(255, 250, 121, 0.5);
}

.color-dc-couples-total {
    background-color: rgba(220,220,220,0.5);
}

.color-dc-couples-open {
    background-color: rgba(253, 180, 92, 0.5);
}

.color-dc-couples-frozen {
    background-color: rgba(160, 202, 255, 0.5);
}

.color-dc-couples-bad {
    background-color: rgb(255,136,136);
}

.color-dc-groups-uncoupled {
    background-color: rgba(255, 250, 121, 0.5);
}


/* commands */

.cmd {
    margin: 20px 10px 10px 0;
    border-bottom: 1px solid #cfcfcf;
}

.cmd-error {
    background-color: #ffe5e5;
}

.cmd-executing, .cmd-finished {
    display: none;
}

.cmd-header {
    text-align: center;
    font-size: 15px;
    border-bottom: 1px solid #eee;
    padding: 15px 0 15px 0;
    margin-right: 10px;
    color: #eee;
}

.cmd-header-finished {
    background-color: #999;
}

.cmd-header-executing {
    background-color: #6b6;
}

.cmd-group, .cmd-command, .cmd-pid, .cmd-host, .cmd-startdt, .cmd-mdash,
.cmd-finishdt, .cmd-output, .cmd-progress, .cmd-uid, .cmd-error-code,
.cmd-error-message {
    display: inline-block;
    width:100px;
    font-size: 12px;
    padding: 6px 20px;
    vertical-align: middle;
}

.cmd-couple {
    font-size: 9px;
}

.cmd-startdt, .cmd-finishdt, .cmd-mdash {
    font-size: 10px;
}

.cmd-error-code {
    font-size: 10px;
    padding-left: 160px;
    width: 10%;
}

.cmd-error-message {
    font-size: 10px;
    width: 200px;
}

.cmd-startdt {
    width: 10%;
}

.cmd-mdash {
    width: 2%;
    padding-left: 0;
    padding-right: 0;
    text-align: center;
}

.cmd-finishdt {
    width: 35%;
}

.cmd-pid {
    width: 60px;
    font-size: 10px;
}

.cmd-command {
    width: 50%;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: 10px;
}

.cmd-progress {
    text-align: center;
    width: 10%;
    padding: 10px 0;
    margin: 0 20px;
}

.cmd-host {
    font-size: 10px;
}

.cmd-runtime {
    width: 10%;
}

.cmd-uid {
    font-size: 10px;
}

.cmd-output {
    text-align: right;
    width: 10%;
    padding: 10px 0;
    margin: 0 20px;
    white-space: nowrap;
}

.cmd-std {
    text-decoration: none;
    border-bottom: 1px dashed #000;
}

.cmd-stdout, .cmd-stderr {
    display: none;
}

a.cmd-std-selected {
    border-bottom: none;
}

.cmd-std-close {
    text-decoration: none;
    border-bottom: 1px dashed #000;
    vertical-align: top;
    margin: 20px 0;
    line-height: 50px;
    font-size: 11px;
}

div.hr {
    height: 15px;
    margin: 0 20px;
    border-bottom: 1px solid #666;
}

.cmd-std-output textarea {
    width: 75%;
    height: 150px;
    margin: 20px;
}

.progressBar {
    /*width: 100px;*/
    height: 16px;
    background-color: #292929;
    font-size: 12px;
    font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
    border: 1px solid #111;
    border-radius: 5px;
    overflow: hidden;
    box-shadow: 0 0 5px #333;
}

.progressBar div {
    height: 100%;
    color: #fff;
    text-align: right;
    line-height: 16px; /* same as #progressBar height if we want text middle aligned */
    width: 0;
    background-color: #1a82f7;
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0099FF), to(#1a82f7));
    background: -webkit-linear-gradient(top, #0099FF, #1a82f7);
    background: -moz-linear-gradient(top, #0099FF, #1a82f7);
    background: -ms-linear-gradient(top, #0099FF, #1a82f7);
    background: -o-linear-gradient(top, #0099FF, #1a82f7);
}


/* D3 styles */

.axis path,
.axis line {
  fill: none;
  stroke: #888;
  shape-rendering: crispEdges;
}

.axis {
    fill: #666;
}


.y.axis path,
.y.axis line {
  fill: none;
  stroke: none;
  shape-rendering: crispEdges;
}


.y.axis line {
    stroke: #bbb;
    stroke-dasharray: 5,2;
    stroke-opacity: .8;
}

.axis .tick {
    font-size: 10px;
}


text.barlabel {
    font-size: 9px;
    fill: #555;
    text-anchor: middle;
    alignment-baseline: central;
}

rect.legend-colorsample {
    fill-opacity: 0.6;
    stroke: rgb(120,120,120);
    stroke-width: 1px;
}

text.legend-label {
    font-size: 9px;
    fill: #555;
    alignment-baseline: central;
}

text.pielabel {
    font-size: 12px;
    fill: #555;
    text-anchor: middle;
    alignment-baseline: central;
}


g.chart-label text {
    font-size: 15px;
    fill: #555;
    alignment-baseline: central;
    text-anchor: middle;
}

g.chart-label-small text {
    font-size: 10px;
    fill: #555;
    alignment-baseline: central;
    text-anchor: middle;
}

body .o-notifications {
    width: 360px;
}

body .o-notifications .o-notification-success {
    background-color: #daffda;
    border: 1px solid #799979;
}

body .o-notifications .o-notification-error {
    background-color: #ffd5d5;
    border: 1px solid #7f6565;
}

path.spinner {
    fill: #2377A7;
}

